cabal-version:      3.0
name:               tokenizer
version:            0.1.0.0
synopsis:           Check uniqueness and tokenize safely
homepage:           https://github.com/Lev135/tokenizer
license:            MIT
license-file:       LICENSE
author:             Lev135
maintainer:         lev_135@mail.ru
copyright:          Lev Dvorkin (c) 2022
category:           text
extra-source-files:
    CHANGELOG.md
    README.md

common basics
    default-language:   Haskell2010

    default-extensions: DuplicateRecordFields
                        NamedFieldPuns
                        TupleSections
                        RecordWildCards
                        LambdaCase
                        MonadComprehensions

                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        DeriveTraversable

                        RankNTypes
                        ScopedTypeVariables
                        PartialTypeSignatures
                        KindSignatures
                        ConstraintKinds
                        DataKinds
                        GADTs
                        TypeFamilies
                        QuantifiedConstraints
                        FlexibleContexts
                        FlexibleInstances
                        TypeOperators
                        TypeApplications


    build-depends:      base ^>=4.14.3.0
                      , containers

    ghc-options:        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wmissing-exported-signatures
                        -Wno-name-shadowing
                        -Wno-unused-do-bind


common lib
    import:             basics

    build-depends:      transformers
                      , mtl

library
    import:             lib
    hs-source-dirs:     src

    exposed-modules:    Text.Tokenizer
                        Text.Tokenizer.BlackWhiteSet
                        Text.Tokenizer.Types
                        Text.Tokenizer.Uniqueness


test-suite tokenizer-test
    import:             basics
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test

    main-is:            Main.hs
    build-depends:      megaparsec
                      , hspec
                      , tokenizer

test-suite test-repl
    import:             lib
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src, test

    main-is:            Main.hs
    other-modules:      Text.Tokenizer
                        Text.Tokenizer.BlackWhiteSet
                        Text.Tokenizer.Types
                        Text.Tokenizer.Uniqueness

    build-depends:      megaparsec
                      , hspec
